// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelmGitlabManifestSource tests Should match snapshot 1`] = `
<div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.STG1.Service.Manifests"
  >
    <div
      class="subheading"
    >
      pipelineSteps.deploy.serviceSpecifications.deploymentTypes.manifests
    </div>
    <div>
      <p
        class="StyledProps--font StyledProps--main inputheader StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        HelmGitlab
        <span
          class="bp3-popover-wrapper manifestInfoTooltip"
        >
          <span
            class="bp3-popover-target"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
              tabindex="0"
            >
              <svg
                height="16"
                viewBox="0 0 12 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </span>
      </p>
      <div
        class="Layout--vertical StyledProps--main inputWidth layoutVerticalSpacing"
        data-name="manifest"
      >
        <div
          class="verticalSpacingInput"
          data-name="connectorRefContainer"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              connector
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 370px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.connectorRef"
                      style="width: 370px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        />
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.repoName"
            >
              common.repositoryName
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.repoName"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.branch"
            >
              pipelineSteps.deploy.inputSet.branch
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.branch"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.folderPath"
            >
              chartPath
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.folderPath"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelmGitlabManifestSource tests Should match snapshot with fromTrigger 1`] = `
<div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.STG1.Service.Manifests"
  >
    <div>
      <p
        class="StyledProps--font StyledProps--main inputheader StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        <span
          class="bp3-popover-wrapper manifestInfoTooltip"
        >
          <span
            class="bp3-popover-target"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
              tabindex="0"
            >
              <svg
                height="16"
                viewBox="0 0 12 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </span>
      </p>
      <div
        class="Layout--vertical StyledProps--main inputWidth layoutVerticalSpacing"
        data-name="manifest"
      >
        <div
          class="verticalSpacingInput"
          data-name="connectorRefContainer"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              connector
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 370px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.connectorRef"
                      style="width: 370px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        />
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.repoName"
            >
              common.repositoryName
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.repoName"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.branch"
            >
              pipelineSteps.deploy.inputSet.branch
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.branch"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.folderPath"
            >
              chartPath
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.folderPath"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
